[metadata]
name = wfetch
version = 1.0
author = G_cat
author_email = gcatmail2@gmail.com
description = Neofetch/pfetch, but for weather.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gcat101/wfetch
project_urls =
    Bug Tracker = https://github.com/Gcat101/wfetch/issues
classifiers =
    Programming Language :: Python :: 3
    Natural Language :: English
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src